[package]
name = "fcm"
version = "1.0.0"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>",
  "Richard Jansen <demo_epso@proton.me>"
]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/rj76/fcm-rust"
repository = "https://github.com/rj76/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[features]
default = ["native-tls", "gauth"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
vendored-tls = ["reqwest/native-tls-vendored"]

gauth = ["dep:gauth"]
yup-oauth2 = ["dep:yup-oauth2"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.11.0", features = ["json"], default-features = false }
chrono = "0.4"
thiserror = "1.0.61"
dotenvy = "0.15.7"

gauth = { version = "0.7.0", optional = true }
yup-oauth2 = { version = "9.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
