[package]
name = "fcm"
version = "1.0.0"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>",
  "Richard Jansen <demo_epso@proton.me>"
]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/rj76/fcm-rust"
repository = "https://github.com/rj76/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls", "yup-oauth2/hyper-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "yup-oauth2/hyper-tls"]
rustls-tls = ["reqwest/rustls-tls", "yup-oauth2/hyper-rustls"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["fs"] }
reqwest = { version = "0.12", features = ["json", "charset", "http2", "macos-system-configuration"], default-features = false }
chrono = "0.4"
thiserror = "1"
dotenvy = "0.15"
yup-oauth2 = { version = "11", features = ["service-account", "ring"], default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
